[gd_scene load_steps=7 format=3 uid="uid://jlthugjebc3q"]

[ext_resource type="Script" uid="uid://c4g5msy8fqmat" path="res://Scripts/game.gd" id="1_kc6at"]
[ext_resource type="Texture2D" uid="uid://c5tevw2qc6tgp" path="res://Asset/KenneySpaceShooter/PNG/playerShip3_blue.png" id="2_28psf"]
[ext_resource type="Script" uid="uid://dtfh888gv8r3r" path="res://Scripts/space_ship.gd" id="2_c88mg"]
[ext_resource type="Texture2D" uid="uid://day7fbkmtx5ph" path="res://Asset/KenneySpaceShooter/Backgrounds/blue.png" id="3_c88mg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1phco"]
radius = 55.0
height = 110.0

[sub_resource type="LabelSettings" id="LabelSettings_uoyx2"]
font_size = 25

[node name="Game" type="Node2D" node_paths=PackedStringArray("score_label", "lives_label", "enemy_timer", "player")]
script = ExtResource("1_kc6at")
score_label = NodePath("Score")
lives_label = NodePath("Lives")
enemy_timer = NodePath("EnemySpawnTimer")
player = NodePath("SpaceShip")
metadata/_edit_lock_ = true

[node name="SpaceShip" type="CharacterBody2D" parent="."]
z_index = 1
position = Vector2(652, 476)
script = ExtResource("2_c88mg")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="SpaceShip"]
z_index = 1
position = Vector2(11, -7.25)
scale = Vector2(1.22449, 1.19333)
texture = ExtResource("2_28psf")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceShip"]
z_index = 1
position = Vector2(11, 0)
shape = SubResource("CapsuleShape2D_1phco")
metadata/_edit_lock_ = true

[node name="Pellet" type="Node2D" parent="SpaceShip"]
position = Vector2(10, -100)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_c88mg")
metadata/_edit_lock_ = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Score" type="Label" parent="."]
offset_left = 557.0
offset_top = 34.0
offset_right = 597.0
offset_bottom = 69.0
text = "0"
label_settings = SubResource("LabelSettings_uoyx2")

[node name="Lives" type="Label" parent="."]
offset_left = 34.0
offset_top = 34.0
offset_right = 120.0
offset_bottom = 69.0
text = "Lives: 3"
label_settings = SubResource("LabelSettings_uoyx2")

[node name="Asteroids" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Bullets" type="Node2D" parent="."]

[connection signal="death" from="SpaceShip" to="." method="on_player_death"]
[connection signal="firing" from="SpaceShip" to="." method="_on_space_ship_firing"]
[connection signal="health_changed" from="SpaceShip" to="." method="update_lives_label"]
[connection signal="outOfBounds" from="SpaceShip" to="." method="_on_space_ship_out_of_bounds"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
